Drawing, creation, colliders and physics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./styles/donkey.css" type="text/css">
 </head>
 <body>
+    <script type="module" src="./js/donkeyKong.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
-    <script src="./js/donkeyKong.js"></script>
+    <!-- <script type="module" src="./js/donkeyKong-compiled.js"></script> -->
 </body>
 </html>
